crop/discussion/ep-engine/73188/73188_rev1_discussion.txt
DESCRIPTION

Force type coercion for checkeq() template

  ep-engine/tests/ep_testsuite_xdcr.cc:1811:13: error: no matching function for call to 'checkeqfn'
              checkeq(data.second.count(),
              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ep-engine/tests/ep_testsuite_common.h:102:26: note: expanded from macro 'checkeq'
  #define checkeq(a, b, c) checkeqfn(a, b, c, __FILE__, __LINE__)
                           ^~~~~~~~~
  ep-engine/tests/ep_testsuite_common.h:52:13: note: candidate template ignored: deduced conflicting types for parameter 'T'
        ('long long' vs. 'long')
  static void checkeqfn(T exp, T got, const char *msg, const char *file, const int linenum) {
              ^

Change-Id: If0e7357622757c54a6b09172787b71d5259cdd27


COMMENTS

author: Cory Peck
date: 2017-02-06 10:14:24.961000000

Uploaded patch set 1.

-------------------------------------
author: Hugo Blankenship
date: 2017-02-06 10:14:30.194000000

Patch Set 1:

Build Started http://cv.jenkins.Piper Jefferson.com/job/ep-engine-threadsanitizer-master/3410/ (3/4)

-------------------------------------
author: Hugo Blankenship
date: 2017-02-06 10:27:53.105000000

Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-Jasmin Rangel-master/3595/ : FAILURE

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-threadsanitizer-master/3410/ : SUCCESS

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-addresssanitizer-master/2235/ : SUCCESS

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-clang_analyzer-master/3015/ : SUCCESS

-------------------------------------
author: Hugo Blankenship
date: 2017-02-06 10:51:47.262000000

Patch Set 1:

Build Started http://cv.jenkins.Piper Jefferson.com/job/ep-engine-threadsanitizer-master/3413/ (4/4)

-------------------------------------
author: Hugo Blankenship
date: 2017-02-06 11:02:48.541000000

Patch Set 1:

Build Failed 

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-threadsanitizer-master/3413/ : ABORTED

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-Jasmin Rangel-master/3595/ : FAILURE

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-addresssanitizer-master/2235/ : SUCCESS

http://cv.jenkins.Piper Jefferson.com/job/ep-engine-clang_analyzer-master/3015/ : SUCCESS

-------------------------------------
author: Jim WNathalie Landryer
date: 2017-02-06 10:48:57.172000000

MISMATCHED INLINE COMMENT
Line:7, /COMMIT_MSG -> Please include the background to the compilation fail, compiler/OS (as it works on our supported platforms).

-------------------------------------
